--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 authors = ["Sidney Liebrand <sidneyliebrand@gmail.com>"]
 
 [dependencies]
-lazy_static = "*"
+lazy_static = "1.0"
+rand        = "0.5.0"
