--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "tfe"
 version = "0.1.0"
 authors = ["Sidney Liebrand <sidneyliebrand@gmail.com>"]
+description = "A fast implementation of 2048 in rust"
+
+repository = "https://github.com/SidOfc/2048-rust"
+license = "MIT"
 
 [dependencies]
 lazy_static = "1.0"
